create section DUVIDAS FREQUENTES

--- a/energeticos/css/energeticos.css
+++ b/energeticos/css/energeticos.css
@@ -11,6 +11,7 @@
 @import url(/energeticos/css/localidade.css);
 @import url(/energeticos/css/dose-extra.css);
 @import url(/energeticos/css/nutricional.css);
+@import url(/energeticos/css/duvidas-frequentes.css);
 
 
 
