create section footers

--- a/energeticos/css/energeticos.css
+++ b/energeticos/css/energeticos.css
@@ -12,6 +12,7 @@
 @import url(/energeticos/css/dose-extra.css);
 @import url(/energeticos/css/nutricional.css);
 @import url(/energeticos/css/duvidas-frequentes.css);
+@import url(/energeticos/css/footer-conhecer.css);
 
 
 
