--- a/energeticos/css/descubra.css
+++ b/energeticos/css/descubra.css
@@ -85,7 +85,7 @@
     background-color: #D52B1E;
     border-radius: 10px;
 
-    color: black;
+    color: white;
     text-transform: uppercase;
     font-size: 16px;
     font-family: var(--monts);
