--- a/body/css/carrosel.css
+++ b/body/css/carrosel.css
@@ -1,5 +1,5 @@
 
-
+/* -------------- CARROSEL ----------- */
 .carrosel{
     display: flex;
     flex-direction: column;
@@ -7,19 +7,21 @@
     padding-bottom: 300px;
 }
 
+/* ---- IMG-CARROSEL ---- */
 .img-carrosel{
     display: flex;
     overflow-x: hidden;
     height: 600px;
 }
 
-
+/* ---- BTN-AGORA ---- */
 .btn-agora{
     margin-top: 50px;
     display: flex;
     justify-content: center;
 }
 
+/* A */
 .btn-agora a{
     display: flex;
     justify-content: center;
@@ -33,6 +35,7 @@
     border-radius: 6px;
 }
 
+/* SPAN */
 .btn-agora a span{
     font-size: 20px;
     font-family: var(--monts);
