create section excelencia

--- a/body/css/body.css
+++ b/body/css/body.css
@@ -8,6 +8,7 @@
 @import url(/body/css/carrosel.css);
 @import url(/body/css/corpos.css);
 @import url(/body/css/feito-voce.css);
+@import url(/body/css/excelencia.css);
 
 
 
