create section ESCOLHER

--- a/body/css/body.css
+++ b/body/css/body.css
@@ -9,6 +9,7 @@
 @import url(/body/css/corpos.css);
 @import url(/body/css/feito-voce.css);
 @import url(/body/css/excelencia.css);
+@import url(/body/css/escolher.css);
 
 
 
