--- a/body/css/escolher.css
+++ b/body/css/escolher.css
@@ -1,5 +1,5 @@
 
-
+/* ------------- ESCOLHER -------------- */
 .escolher{
     display: flex;
     flex-direction: column;
@@ -12,13 +12,14 @@
     padding-bottom: 300px;
 }
 
-
+/* ---- TILTE-ESCOLHER ---- */
 .title-escolher{
     display: flex;
     justify-content: center;
     padding-top: 50px;
 }
 
+/* H2 */
 .title-escolher h2{
     font-size: 28px;
     color: var(--orange);
@@ -26,6 +27,7 @@
     font-family: var(--monts);
 }
 
+/* ---- CONTAINER-ESCOLHER ---- */
 .container-escolher{
     display: flex;
     justify-content: space-between;
@@ -35,7 +37,7 @@
 
 }
 
-
+/* ---- ITENS-ESCOLHER ---- */
 .itens-escolher{
     display: flex;
     flex-direction: column;
@@ -47,7 +49,7 @@
     position: relative;
 }
 
-
+/* ---- IMG-ESCOLHER ---- */
 .img-escolher{
     display: flex;
     flex-direction: column;
@@ -55,6 +57,7 @@
     gap: 5px;
 }
 
+/* ---- TITLULO-ESCOLHER ---- */
 .titulo-escolher{
     display: flex;
     flex-direction: column;
@@ -62,10 +65,12 @@
     align-items: center;
 }
 
+/* SPAN */
 .titulo-escolher span{
     color: var(--orange);
 }
 
+/* H4 */
 .titulo-escolher h4{
     font-size: 30px;
     color: var(--orange);
@@ -73,6 +78,7 @@
     font-weight: 700;
 }
 
+/* ---- PRICE ---- */
 .price{
     display: flex;
     justify-content: center;
@@ -84,6 +90,7 @@
     margin-bottom: 20px;
 }
 
+/* ---- SUB-ESCOLHER ---- */
 .sub-excolher{
     display: flex;
     flex-direction: column;
@@ -91,7 +98,7 @@
     margin-left: 10px;
 }
 
-
+/* LI */
 .sub-excolher li{
     font-family: var(--monts);
     font-weight: 600;
@@ -99,6 +106,7 @@
 
 }
 
+/* ---- PAGAR ---- */
 .pagar{
     display: flex;
     padding-inline: 20px;
@@ -109,6 +117,7 @@
     
 }
 
+/* P */
 .pagar p{
     font-size: 12px;
     color: var(--black);
@@ -118,8 +127,7 @@
 }
 
 
-
-
+/* ---- BTNS-ESCOLHER-QUERO ---- */
 .btns-escolher-quero{
     display: flex;
     position: absolute;
@@ -127,6 +135,7 @@
     left: 60px;
 }
 
+/* A */
 .btns-escolher-quero a{
     display: flex;
     justify-content: center;
@@ -138,6 +147,7 @@
     border-radius: 12px;
 }
 
+/* SPAN */
 .btns-escolher-quero a span{
     font-size: 18px;
     text-transform: uppercase;
@@ -147,12 +157,14 @@
 
 }
 
+/* ---- ACESSAR ---- */
 .acessar{
     display: flex;
     justify-content: center;
     padding-block: 50px;
 }
 
+/* P */
 .acessar p{
     color: white;
     font-size: 18px;
