create section RELATOS

--- a/body/css/body.css
+++ b/body/css/body.css
@@ -11,6 +11,7 @@
 @import url(/body/css/excelencia.css);
 @import url(/body/css/escolher.css);
 @import url(/body/css/transformacao.css);
+@import url(/body/css/relatos.css);
 
 
 
