create section QUESTIONS

--- a/body/css/body.css
+++ b/body/css/body.css
@@ -12,6 +12,7 @@
 @import url(/body/css/escolher.css);
 @import url(/body/css/transformacao.css);
 @import url(/body/css/relatos.css);
+@import url(/body/css/questions.css);
 
 
 
