--- a/body/css/questions.css
+++ b/body/css/questions.css
@@ -1,5 +1,5 @@
 
-
+/* -------------- QUESTIONS ------------- */
 .questions{
     display: flex;
     flex-direction: column;
@@ -7,12 +7,13 @@
     padding-bottom: 300px;
 }
 
+/* ---- TITLE-QUESTIONS ---- */
 .title-questions{
     display: flex;
     justify-content: center;
 }
 
-
+/* H2 */
 .title-questions h2{
     font-size: 28px;
     color: var(--orange);
@@ -20,7 +21,7 @@
     font-weight: 700;
 }
 
-
+/* ---- CONTAINER-QUESTIONS ---- */
 .container-questions{
     display: flex;
     flex-direction: column;
@@ -30,6 +31,7 @@
 
 }
 
+/* ---- ITENS-QUESTIONS ---- */
 .itens-questions{
     display: flex;
     align-items: center;
@@ -42,7 +44,7 @@
 }
 
 
-
+/* H3 */
 .itens-questions h3{
     display: flex;
     justify-content: center;
@@ -52,13 +54,14 @@
     color: var(--black);
 }
 
-
+/* ---- SUB-QUESTIONS ---- */
 .sub-questions{
     display: flex;
     justify-content: center;
     margin-top: 100px;
 }
 
+/* SPAN */
 .sub-questions span{
     font-size: 16px;
     color: var(--black);
@@ -67,7 +70,7 @@
 
 }
 
-
+/* ---- BTN-CHAMAR ---- */
 .btn-chamar{
     display: flex;
     justify-content: center;
@@ -76,6 +79,7 @@
     
 }
 
+/* A */
 .btn-chamar a{
     text-decoration: none;
     display: flex;
@@ -90,7 +94,7 @@
 
 }
 
-
+/* SPAN */
 .btn-chamar a span{
     font-size: 20px;
     font-family: var(--monts);
@@ -99,3 +103,4 @@
     font-weight: 600;
     line-height: 29px;
 }
+
