create section footer-body

--- a/body/css/body.css
+++ b/body/css/body.css
@@ -13,6 +13,7 @@
 @import url(/body/css/transformacao.css);
 @import url(/body/css/relatos.css);
 @import url(/body/css/questions.css);
+@import url(/body/css/footer-body.css);
 
 
 
