--- a/body/css/footer-body.css
+++ b/body/css/footer-body.css
@@ -1,5 +1,5 @@
 
-
+/* ----------- FOOTER-BODY ------- */
 .footer-body{
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
     background-color: #212121;
 }
 
-
+/* IMG */
 .footer-body img{
     height: 80px;
 }
